--- a/LoginView/Storyboards/Base.lproj/Main.storyboard
+++ b/LoginView/Storyboards/Base.lproj/Main.storyboard
@@ -119,34 +119,42 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, User!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="4w5-re-Vh3">
                                 <rect key="frame" x="90" y="310" width="140" height="37"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="31"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gd4-BA-JCv">
-                                <rect key="frame" x="40" y="375" width="240" height="44"/>
+                                <rect key="frame" x="40" y="369" width="240" height="50"/>
+                                <color key="backgroundColor" red="0.1260730326" green="0.18812230229999999" blue="0.2491863966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="sIn-sJ-ZDu"/>
+                                    <constraint firstAttribute="height" constant="50" id="sIn-sJ-ZDu"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Log Out">
-                                    <backgroundConfiguration key="background" cornerRadius="17">
-                                        <color key="backgroundColor" systemColor="linkColor"/>
-                                    </backgroundConfiguration>
-                                    <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="17"/>
-                                    <color key="baseForegroundColor" systemColor="systemGray6Color"/>
-                                </buttonConfiguration>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Log Out">
+                                    <color key="titleColor" systemColor="systemGray6Color"/>
+                                </state>
                                 <connections>
                                     <segue destination="wci-Gf-Y5G" kind="unwind" unwindAction="unwindFor:" id="Ka9-S0-lV0"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8u6-gV-hL7">
+                                <rect key="frame" x="85" y="150" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="8u6-gV-hL7" secondAttribute="height" multiplier="1:1" id="BJB-ta-j1f"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="CR0-oF-xnH"/>
-                        <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.090582124890000004" green="0.13718774910000001" blue="0.17386439440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="4w5-re-Vh3" firstAttribute="top" secondItem="8u6-gV-hL7" secondAttribute="bottom" constant="10" id="6wn-1A-rfv"/>
                             <constraint firstItem="CR0-oF-xnH" firstAttribute="trailing" secondItem="4w5-re-Vh3" secondAttribute="trailing" constant="90" id="QgU-X0-9kS"/>
+                            <constraint firstItem="8u6-gV-hL7" firstAttribute="top" secondItem="CR0-oF-xnH" secondAttribute="top" constant="150" id="Shi-4n-doy"/>
                             <constraint firstItem="CR0-oF-xnH" firstAttribute="trailing" secondItem="Gd4-BA-JCv" secondAttribute="trailing" constant="40" id="ddV-dy-WZd"/>
                             <constraint firstItem="CR0-oF-xnH" firstAttribute="bottom" secondItem="Gd4-BA-JCv" secondAttribute="bottom" constant="100" id="h6G-3W-u41"/>
+                            <constraint firstItem="8u6-gV-hL7" firstAttribute="width" secondItem="Q5K-ud-CMO" secondAttribute="height" multiplier="75:284" id="mnv-Cb-GAR"/>
                             <constraint firstItem="4w5-re-Vh3" firstAttribute="leading" secondItem="CR0-oF-xnH" secondAttribute="leading" constant="90" id="oEl-ai-dyk"/>
-                            <constraint firstItem="4w5-re-Vh3" firstAttribute="top" secondItem="CR0-oF-xnH" secondAttribute="top" constant="310" id="xmr-AJ-AWc"/>
+                            <constraint firstItem="8u6-gV-hL7" firstAttribute="centerX" secondItem="Q5K-ud-CMO" secondAttribute="centerX" id="thI-Bo-trS"/>
                             <constraint firstItem="Gd4-BA-JCv" firstAttribute="leading" secondItem="CR0-oF-xnH" secondAttribute="leading" constant="40" id="xp9-Pw-hgZ"/>
                         </constraints>
                     </view>
@@ -154,6 +162,8 @@
                         <imageReference key="image" image="person.circle.fill" catalog="system" symbolScale="large"/>
                     </tabBarItem>
                     <connections>
+                        <outlet property="logoutButton" destination="Gd4-BA-JCv" id="mQc-47-T7W"/>
+                        <outlet property="userImageView" destination="8u6-gV-hL7" id="GDM-j1-Cx7"/>
                         <outlet property="welcomeLabel" destination="4w5-re-Vh3" id="VUQ-jj-Otu"/>
                     </connections>
                 </viewController>
@@ -170,7 +180,8 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="AQf-uY-Gg0">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.1260730326" green="0.18812230229999999" blue="0.2491863966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="tjl-qO-AhQ" kind="relationship" relationship="viewControllers" id="MtJ-t0-1MP"/>
@@ -188,14 +199,50 @@
                     <view key="view" contentMode="scaleToFill" id="QRz-MI-FnG">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1SB-ac-gSa">
+                                <rect key="frame" x="200" y="486" width="105" height="48"/>
+                                <color key="backgroundColor" red="0.1260730326" green="0.18812230229999999" blue="0.2491863966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="4Y3-V5-NMW"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="105" id="QMh-55-2Gj"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="More Info"/>
+                                <connections>
+                                    <segue destination="GK2-dh-ufL" kind="show" id="7TN-xi-hg6"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="SSy-Bi-Poz"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.090582124890000004" green="0.13718774910000001" blue="0.17386439440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="SSy-Bi-Poz" firstAttribute="trailing" secondItem="1SB-ac-gSa" secondAttribute="trailing" constant="15" id="0yU-re-v7x"/>
+                            <constraint firstItem="1SB-ac-gSa" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="SSy-Bi-Poz" secondAttribute="leading" symbolic="YES" id="1sA-cq-mL6"/>
+                            <constraint firstItem="1SB-ac-gSa" firstAttribute="bottom" secondItem="SSy-Bi-Poz" secondAttribute="bottom" constant="15" id="vNA-f1-8uJ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="oQs-5k-uxs"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vEI-85-gb6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2296.875" y="1147.1830985915492"/>
+            <point key="canvasLocation" x="2221.875" y="1146.1267605633802"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="b3s-RW-337">
+            <objects>
+                <viewController id="GK2-dh-ufL" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AoS-13-Oht">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ula-WN-S29"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Dxn-g8-9o9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PAm-6E-DKN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2222" y="1994"/>
         </scene>
         <!--About me-->
         <scene sceneID="qB1-oz-By3">
@@ -222,14 +269,11 @@
     <resources>
         <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <image name="person.text.rectangle.fill" catalog="system" width="128" height="93"/>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="tertiarySystemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="tintColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
